// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`param instruction compiler > registers a float64 function parameter 1`] = `
{
  "currentFunctionSignature": {
    "parameters": [
      "float64",
    ],
    "returns": [],
  },
  "locals": {
    "x": {
      "index": 0,
      "isFloat64": true,
      "isInteger": false,
    },
  },
}
`;

exports[`param instruction compiler > registers a function parameter 1`] = `
{
  "currentFunctionSignature": {
    "parameters": [
      "int",
    ],
    "returns": [],
  },
  "locals": {
    "value": {
      "index": 0,
      "isInteger": true,
    },
  },
}
`;
